# plant_doc

./: Procfile  README.md  setup.cfg
plant_doc/: server.py
plant_doc/disease_diagnosers/: leaf_spots.py
plant_doc/disease_estimator/: disease_estimator.py
plant_doc/plant_doctor/: plant_doctor.py
plant_doc/utils/: cache_remover.py  color_reporter.py  health_calculator.py  image_downloader.py  leaf_image.py  leaf_spots.py
