[metadata]
name = plant_doc
version = attr: plant_doc.__version__
description = PlantCV based program to detect nutrient deficiency in plants.
author = Gaurav Goswami
author_email = gouravgoswami48@gmail.com
url = https://www.github.com/gary1998/plant_doc
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description = PlantCV based program to detect nutrient deficiency in plants.

[options]
include_package_data = True
packages = find:
install_requires =
    datetime
    flask
    flask-cors
    requests
    plantcv
    numpy
    opencv-python
    matplotlib
    pandas
    scikit-image
    scipy
    argparse
    python-dateutil
    plotnine
    setuptools
    pytest

[bdist_wheel]
universal = 1
